Changed the 'Save Button' for the subtitle on asset preview form

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/asset_content_detail.html
@@ -21,7 +21,8 @@
                         <input type="file" id="docsubtitlefile" placeholder="" name="doc_f" />
                         <span class="add_more_files"><u>+ Subtitle</u></span>
                     </form>
-                    <input type="asset-save-button" id="" class="orange-button" onclick="save_asset_cont_data()" value="Save"/>
+                    <button type="button" class="right orange-button save-asset" onclick="save_asset_cont_data()">Save Asset</button>
+                   <!-- <input type="asset-save-button" id="" class="orange-button" onclick="save_asset_cont_data()" value="Save"/>-->
                 </div>
             </div>
             <div class="small-12 medium-6 large-6 columns">
