set link to complete btn of explore groups

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
@@ -48,15 +48,12 @@
 
                             {% else %}
 
-                            
+                            {% get_explore_url as explore_url %}
+                            <a class="explore-button small expand" href="{% url explore_url %}">
                               <div class="small-6 medium-6 text-center columns end explore-button">
-                                  {% get_explore_url as explore_url %}
-                                  
-                                  <a class="explore-button small expand" href="{% url explore_url %}">Explore Groups
-                                  </a>
-                                                                
+                                  Explore Groups
                               </div>
-                            
+                            </a>
 
 
 
