--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -85,7 +85,8 @@
             <div class="transcript_files">
                 <form class="dropzone" id ="docPost" enctype="multipart/form-data" method="post" action="{% url 'add_assetcontent' group_id %}" >
                     <input type="file" id="docFile" placeholder="" name="work"/>
-                    <input type="button" class ="asset-save-button" id="" onclick="save_form()" value="Save"/>
+                   <input type="button" class ="asset-save-button" id="" onclick="save_form()" value="Save"/>
+                    <!--<button type="button" class="right orange-button save-asset" onclick="save_asset_cont_data()">Save Asset</button>-->
                     <input type="hidden" name="context_name" value="{{title}}">
                     <input type="hidden" class ="asset_obj_val" name="asset_obj_name" data-asset-obj-val="">
                 </form>
