--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation-icon-fonts/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="/static/ndf/css/rubik-fonts.css">
+    <link rel="stylesheet" type="text/css" href="/static/ndf/css/clix-activity-styles.css">
     <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation/css/foundation.css">
     <link rel="shortcut icon" href="{{site.FAVICON}}">
     <link rel="stylesheet" href="/static/ndf/bower_components/foundation/css/normalize.css">
