--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
@@ -2,87 +2,32 @@
 
 {% block title %}GStudio - Course Creator{% endblock %}
 {% block body_content %}
-    <div class="course_creator_header">
-        <div class="left course_heading">
-            <input id="unit-name" type="text" placeholder="Enter unit name" data-id='{{node.pk}}'/>
-        </div>
-        <div class="right course_actions">
-            <ul>
-                <li id='save-unit'>Save & Close</li>
-                <li>Announce</li>
-                <li>Delete this course</li>
-            </ul>
-        </div>
-    </div>
     <div class="row create_unit">
-        <div class="small-12 columns vertically-center">
-            <div class="create_lesson text-center">
-                <h3>You haven't created any lessons yet</h3>
-                <button class="button-hollow-black">Add Lesson</button><br />
-                <span style="margin-top: 5px;display: block;">
-                    <a href="#">Learn more</a>
-                    about creating courses.
-                </span>
-            </div>
+        <div class="small-12 columns">
+            <form id ="course_page_form" enctype="multipart/form-data" method="post" action="{% url 'unit_create_edit' group_id %}">{% csrf_token %}
+                <div class="course_creator_header">
+                    <div class="left course_heading">
+                        <input id="unit-name" name="name" type="text" placeholder="Enter unit name"/>
+                    </div>
+                </div>
+                <div class="course_creator_header">
+                    <div class="left course_heading">
+                        <input id="unit-altnames" name="altnames" type="text" placeholder="Enter unit display name"/>
+                    </div>
+                </div>
+                <div class="right course_actions">
+                    <ul>
+                        <li><input type="submit" name="save" value="Save" class="save-unit"></li>
+                    </ul>
+                </div>
+            </form>
         </div>
     </div>
+    <script type="text/javascript">
+        $(document).on('keyup','#unit-name',function(){
+          var txtUnitNameval = $('#unit-name').val();
+          $('#unit-altnames').val(txtUnitNameval);
+        });        
+    </script>
 {% endblock %}
 
-{% block script %}
-// <script type="text/javascript">
-
-    function updateUnitName (unitName, unitId) {
-        /*
-        updateUnitName()
-        - to create/update name of unit.
-        */
-        result = undefined;
-        $.ajax({
-            type: "POST",
-            data:{
-                'csrfmiddlewaretoken': "{{csrf_token}}",
-                "name": unitName,
-                "id": unitId
-            },
-            url: "{% url 'unit_create_edit' group_id %}",
-            // datatype: "",
-            success: function(data) {
-                if(eval(data)){
-                    alert('Unit saved successfully');
-                    result = true;
-                    return result;
-                }
-                else{
-                    alert('Save did not happen. Please try agin.');
-                    result = false;
-                    // console.log(result)
-                    return result;
-                }
-            }
-        });
-
-        console.log(result)
-        return result;
-    }
-
-    $('#save-unit').click(
-        function () {
-            var inputUnitText = $('#unit-name').val();
-            var unitId = $('#unit-name').attr('data-id');
-
-            // if (unitId){
-            //     // New unit node
-            //     // url = "{% url 'unit_create_edit' group_id %}"
-            // }
-            // else{
-
-            // }
-            res = updateUnitName(inputUnitText, unitId);
-            // alert(res);
-            if(res){
-                location.href = '{% url "list_units" group_id %}' + '/' + inputUnitText.trim();
-            }
-        });
-
-// </script>
-{% endblock script %}
