--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -34,7 +34,7 @@
                             <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>Overview</a>
                         </li>
                         <li >
-                            <a href="{% url 'unit_detail' group_id group_id %}" {% if title == 'unit_authoring' %}class="selected"{% endif %}>Lessons</a>
+                            <a href="{% url 'unit_detail' group_id %}" {% if title == 'unit_authoring' %}class="selected"{% endif %}>Lessons</a>
                             <!-- <a href="#group_blog">Blog</a> -->
                         </li>
                         <li>
