--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -25,6 +25,10 @@
             <div class="row">
                 <div class="small-12 columns group_header">
                     <div class="group_title left">{{group_object.name}}</div>
+                    <div class="right course_actions">
+                      <i class="fi-widget"></i>
+                    </div>
+
                 </div>
             </div>
             <div class="row">
