default asset thumbnail added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -639,7 +639,7 @@ ul.horizontal_tabs_gstudio {
         min-height: 200px;
         margin-left: 5px;
         //background-color: #eee;
-        background: url(/static/ndf/images/elibrary-01.svg)no-repeat;
+        background: url(/static/ndf/images/resource.png)no-repeat;
     }
 
     .asset_text {
