--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -623,7 +623,7 @@ ul.horizontal_tabs_gstudio > li.sub_group_action:hover ul {
 .asset_tile .asset_preview {
   min-height: 200px;
   margin-left: 5px;
-  background: url(/static/ndf/images/elibrary-01.svg) no-repeat;
+  background: url(/static/ndf/images/resource.png) no-repeat;
 }
 /* line 645, ../../../scss/_clix2017.scss */
 .asset_tile .asset_text {
