--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -3,10 +3,13 @@
         <i class="fi-filter"> </i>
         Filter
     </button>
- -->    <button type="button" class="right orange-button createAsset">
+
+ -->    <div class="row">
+        <button type="button" class="right orange-button createAsset">
         <i class="fi-plus"> </i>
         Add Asset
     </button>
+    </div>
 </div>
 <div class="row"> 
       {% for each in asset_nodes %}
