--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -1,8 +1,10 @@
 <div class="elibrary-actions">
+    <div class="row">
     <button type="button" class="right orange-button createActivityPage">
         <i class="fi-plus"> </i>
         Add Activity Page
     </button>
+    </div>
 </div>
 
 <div id="addActivityPage" class="hide">
