--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -1,3 +1,6 @@
+{% block head %}
+<script src="/static/ndf/bower_components/handlebars/handlebars.js"></script>
+{% endblock head %}
     <div class="row course_creator">
         <div class="small-12 columns">
             <div class="course_editor ">
