explore projects lbl added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
@@ -51,7 +51,7 @@
                             {% get_explore_url as explore_url %}
                             <a class="explore-button small expand" href="{% url explore_url %}">
                               <div class="small-6 medium-6 text-center columns end explore-button">
-                                  Explore Groups
+                                  Explore Projects
                               </div>
                             </a>
 
